--- a/live-vanilla-build/index.html
+++ b/live-vanilla-build/index.html
@@ -4,12 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" href = "css/index.css">
+    <script
+    src="https://kit.fontawesome.com/3bfd3ce9e5.js"
+    crossorigin="anonymous">
+    </script>
     <title>Vanilla JS T3</title>
 </head>
 <body>
-    <p>
-        Placeholder
-    </p>
-    
+    <main>
+        <div class = "grid">
+
+            <!-- Turn indicator -->
+            <div class = "turn">
+                <i class="fa-solid fa-x turquoise"></i>
+                <p class="turquoise">Player 1, you're up!</p>
+            </div>
+
+            <!-- Dropdown menu -->
+            <div class="menu" data-id="menu">
+                <button class="menu-btn">
+                    Actions
+                <i class="fa-solid fa-chevron-down"></i>
+                </button>
+
+                <!-- border for rounded edges and hidden for hiding dropdown menu-->
+                <div class="items border hidden">
+                    <button data-id="reset-btn">Reset</button>
+                    <button data-id="new-round-btn">New Round</button>
+                </div>
+            </div>
+
+            <!-- Game board -->
+            <div class = "square shadow "></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+            <div class = "square shadow"></div>
+
+            <!-- Scoreboard -->
+            <div class = "score shadow" style="background-color: var(--turquoise)">
+                <p>Player 1</p>
+                <span data-id="p1-wins">0 Wins</span>
+            </div>
+            <div class = "score shadow" style="background-color: var(--light-gray)">
+                <p>Ties</p>
+                <span data-id="ties">0</span>
+            </div>
+            <div class = "score shadow" style="background-color: var(--green)">
+                <p>Player 2</p>
+                <span data-id="p2-wins">0 Wins</span>
+            </div>
+        </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>
+            </br>
+            Original project by
+            <a href="https://twitter.com/megfdev">@megfdev</a> and
+            <a href="https://twitter.com/Ivan00sto">@Ivan00Sto</a>
+        </br>
+        </br>
+        </p>
+        <p>
+            Refactored by 
+            <a href="https://akshata-dhuraji.netlify.app/">Akshata Dhuraji</a>
+        </p>
+    </footer>
+
+     <!-- Last dark screen that opens when game ends -->
+     <div class="screen hidden" data-id="screen">
+        <div class="screen-contents">
+          <p data-id="screen-text">Player 1 wins!</p>
+          <button data-id="screen-btn">Play again</button>
+        </div>
+      </div>
 </body>
 </html>
